--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "final-form": "^4.20.7",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-final-form": "^6.5.9",
+    "react-quill": "^2.0.0",
     "typescript": "4.9.4"
   }
 }
