--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,11 +16,16 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "final-form": "^4.20.7",
+    "html-react-parser": "^3.0.4",
     "next": "13.0.6",
+    "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
+    "primereact": "^8.7.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-final-form": "^6.5.9",
     "react-quill": "^2.0.0",
+    "sass": "^1.57.0",
     "typescript": "4.9.4"
   }
 }
